--- a/src/css/image_slider.css
+++ b/src/css/image_slider.css
@@ -1,9 +1,67 @@
 .image-slider-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .image-slider {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 500px;
+    height: 300px;
+    background-color: lightblue;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.image-slider-action {
+    padding: 10px;
+    width: 30px;
+    height: 50px;
+    background-color: transparent;
+    font-weight: 400;
+    color: white;
+    font-size: large;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-slider-forward {
+    border-radius: 5px 0px 0px 5px;
+}
+
+.image-slider-backward {
+    border-radius: 0px 5px 5px 0px;
+}
+
+.image-slider-action:hover {
+    background-color: rgb(87, 87, 87);
+    opacity: 0.8;
+}
+
+.image-slider-navigation-circles {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.image-slider-navigation-circle {
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    background-color: lightgray;
+}
+
+.image-slider-navigation-selected {
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(170, 27, 27);
 }
